# SiHub

./: Dockerfile  README.md  docker-compose.windows.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/models/: sonar_schema.py
app/services/: analytics.py  chart_generator.py  mock_db.py  oracle_db.py  settings_store.py
app/views/: pages.py
backend/: Dockerfile  Dockerfile.windows  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: wafer_map.py  yield_trend.py
backend/app/core/: config.py
backend/app/models/: wafer_map.py  yield_data.py
backend/app/services/: analytics.py  mock_db.py  oracle_db.py
frontend/: Dockerfile  Dockerfile.windows  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ThemeToggle.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/pages/: Dashboard.jsx  Settings.jsx  WaferMapViewer.jsx
static/css/: style.css
templates/: base.html
templates/components/: header.html  sidebar.html
templates/pages/: dashboard.html  settings.html  wafermap.html
templates/partials/: dashboard_content.html  product_list.html  wafer_lots.html  wafer_maps.html
